# Agent-Eval-Orchestrator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_auth_rbac.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  defaults.py  layout.py  permissions.py  security.py  worker_paths.py
backend/app/model/: db.py  repo_asset_sync_jobs.py  repo_auth.py  repo_batches.py  repo_case_runs.py  repo_rerun_jobs.py  repo_runs.py  repo_templates.py  repo_workers.py  tables.py
backend/app/schema/: assets.py  auth.py  batches.py  case_runs.py  common.py  dashboard.py  datasets.py  groups.py  health.py  runs.py  templates.py  users.py  worker_protocol.py  workers.py
backend/app/service/: asset_service.py  auth_service.py  dashboard_service.py  dataset_service.py  enroll_service.py  errors.py  files_service.py  rbac_service.py  run_service.py  status.py  template_service.py  worker_protocol_service.py  worker_service.py
backend/app/worker/: daemon.py
backend/tests/: conftest.py
backend/tests/api/: test_assets_api.py  test_auth_api.py  test_create_distribute_api.py  test_dashboard_api.py  test_datasets_api.py  test_enroll_api.py  test_files_api.py  test_groups_api.py  test_harbor_viewer_api.py  test_health.py  test_job_archive_api.py  test_rbac_existing_routes.py  test_run_actions_api.py  test_runs_api.py  test_static_mount.py  test_templates_api.py  test_users_api.py  test_worker_protocol_api.py  (+1 more)
(+223 files in other folders)
